feat!: poo readme how to use JavaFX